# mac-monitor

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT_STATUS.md  DEVELOPMENT.md  README.md  full_build_log.txt  verify_system.sh  任务.md  进度.md
mac-monitor-project/: .gitignore  AUDIT_SERVICE_FIX.md  FIX_NOW.md  MANUAL_FIX.sh  README.md  SCREEN_RECORDING_PERMISSION_GUIDE.md  SOLUTION.md  build_all.sh  cleanup_and_start.sh  debug_audit_startup.sh  dmg-config.json  entitlements.plist  fix_socket.sh  quick_fix.sh  rebuild_and_deploy.sh  rebuild_audit.sh  restart_audit_service.sh  start_audit_daemon.sh  start_audit_service.sh  start_client_full.sh  start_gui.sh  test_audit.sh  test_screen_permission.sh  vpn-helper
mac-monitor-project/audit-service/: README.md  build_client.sh  run_client.sh  test_ipc.sh  test_ipc_registration.py  verify_traffic_filter.py
mac-monitor-project/audit-service/rust-core/: Cargo.toml  build.rs  schema.sql
mac-monitor-project/audit-service/rust-core/include/: audit_core.h
mac-monitor-project/audit-service/rust-core/src/: clock.rs  lib.rs
mac-monitor-project/audit-service/rust-core/src/db/: mod.rs
mac-monitor-project/audit-service/rust-core/src/ipc/: mod.rs
mac-monitor-project/audit-service/rust-core/src/models/: mod.rs
mac-monitor-project/audit-service/rust-core/src/scanner/: mod.rs
mac-monitor-project/audit-service/rust-core/src/uploader/: mod.rs  sync.rs
mac-monitor-project/gui-app/: README.md  build_output_tauri.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
mac-monitor-project/gui-app/src-tauri/: Cargo.toml  build.rs  build_output.txt  tauri.conf.json
mac-monitor-project/gui-app/src-tauri/capabilities/: default.json
mac-monitor-project/gui-app/src-tauri/icons/: icon.icns
mac-monitor-project/gui-app/src-tauri/permissions/: autogenerated.json
mac-monitor-project/gui-app/src-tauri/src/: main.rs
mac-monitor-project/gui-app/src-tauri/swift/: ProxyManager.swift  VPNManager.swift  main.swift  vpn-helper
mac-monitor-project/network-extension/: README.md
mac-monitor-project/network-extension/rust-core/: Cargo.toml
mac-monitor-project/network-extension/rust-core/include/: network_stack.h
mac-monitor-project/network-extension/rust-core/src/: clock.rs  device.rs  dns.rs  lib.rs  mitm.rs  stack.rs
mac-monitor-project/output/: Project_Overview.md  Technical_Architecture.md  User_Guide.md
mac-monitor-project/traffic-proxy/: Cargo.toml
mac-monitor-project/traffic-proxy/src/: clock.rs  main.rs  mitm.rs
mac-monitor-server/: CLAUDE.md  pom.xml  start_server.sh
mac-monitor-server/ruoyi-admin/: pom.xml
mac-monitor-server/ruoyi-asset/: pom.xml
mac-monitor-server/ruoyi-library/: pom.xml
mac-monitor-server/ruoyi-monitor/: pom.xml
mac-monitor-server/ruoyi-system/: pom.xml
mac-monitor-server/ruoyi-ui/: .env.development  .env.production  .env.staging  vue.config.js
mac-monitor-server/sql/: mac_monitor.sql  mac_monitor_clipboard.sql  mac_monitor_menu.sql  mac_monitor_menu_audit_logs.sql  mac_monitor_menu_log.sql  mac_monitor_menu_policy.sql  mac_monitor_patch_20250116.sql  mac_monitor_patch_20250116_screenshot_fields.sql  (+1 more)
output/: 技术方案.md  需求文档.md
output/design/: 01_架构设计与通信协议.md  (+4 more)
(+97 files in other folders)
