[package]
name = "traffic-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
hyper = { version = "1.2", features = ["full", "server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.5"
# rustls 0.23 ecosystem
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
tokio-rustls = "0.26" 
rustls-pemfile = "2.1"
rustls-pki-types = "1.4"
webpki-roots = "0.26"
rcgen = "0.12"
ring = "0.17"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
interprocess = "1.1" 
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["macros"] }
httparse = "1.8"
lazy_static = "1.4"

[[bin]]
name = "traffic-proxy"
path = "src/main.rs"
