[package]
name = "audit-logic-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
# Image Processing
image = "0.25"
# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
# Async
tokio = { version = "1", features = ["full"] }
# Concurrency
lazy_static = "1.4"
# IPC
interprocess = "1.1"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
# Cryptography
libsm = "0.6"
hex = "0.4"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
# Logging
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
mac_address = "1.1"
simplelog = "0.12"
