[package]
name = "mac-monitor-gui-core"
version = "0.1.0"
description = "GUI backend logic for Mac Monitor"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# IPC communication with other services
interprocess = "1.1" 
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-shell = "2.3.4"
tauri-plugin-autostart = "2.3.4"
